Fix class naming of elements which touchstart event to be applied to emulate css hover

--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
         </h2>
         <div class="section__content projects__content">
           <ul class="projects__list">
-            <li class="js--project__item projects__item">
+            <li class="js--projects__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1291,7 +1291,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="js--project__item projects__item">
+            <li class="js--projects__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1340,7 +1340,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="js--project__item projects__item">
+            <li class="js--projects__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1397,7 +1397,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="js--project__item projects__item">
+            <li class="js--projects__item projects__item">
               <figure>
                 <picture>
                   <img
