Replace Waypoint.js with Scrollama.js library to improve performance

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     ></script>
     <script
       defer
-      src="https://unpkg.com/waypoints@4.0.1/lib/noframework.waypoints.min.js"
+      src="https://unpkg.com/scrollama@2.0.1/build/scrollama.min.js"
     ></script>
     <script
       defer
