Restore the previous zoom like effect for loaded images

--- a/index.html
+++ b/index.html
@@ -299,19 +299,17 @@
         <h2 class="section__title about__title">About</h2>
         <div class="section__content about__content">
           <figure class="about__details">
-            <img
-              class="about__photo lozad lozad-hidden"
-              data-src="static/img/stassribnyi.jpg"
-              src="static/img/placeholder-square.png"
-              alt="Stas Sribnyi"
-            />
-            <noscript>
+            <div class="about__photo">
               <img
-                class="about__photo"
-                src="static/img/stassribnyi.jpg"
+                class="lozad lozad-hidden"
+                data-src="static/img/stassribnyi.jpg"
+                src="static/img/placeholder-square.png"
                 alt="Stas Sribnyi"
               />
-            </noscript>
+              <noscript>
+                <img src="static/img/stassribnyi.jpg" alt="Stas Sribnyi" />
+              </noscript>
+            </div>
             <figcaption>
               <ul>
                 <li class="about__detail">
@@ -1049,22 +1047,24 @@
                         his team as well, when it was needed.
                         <cite>
                           <a
-                            class="career__recommendation-details"
+                            class="recommendation__details"
                             href="https://www.linkedin.com/in/nickolay-sredin-518b2037/"
                           >
-                            <img
-                              class="lozad lozad-hidden"
-                              data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
-                              src="static/img/placeholder-square.png"
-                              alt="Nickolay Sredin"
-                            />
-                            <noscript>
+                            <div class="recommendation__author-photo">
                               <img
-                                src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                class="lozad lozad-hidden"
+                                data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                src="static/img/placeholder-square.png"
                                 alt="Nickolay Sredin"
                               />
-                            </noscript>
-                            <div>
+                              <noscript>
+                                <img
+                                  src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                  alt="Nickolay Sredin"
+                                />
+                              </noscript>
+                            </div>
+                            <div class="recommendation__author-info">
                               <h4>Nikolai Sredin</h4>
                               <p>Senior QA Engineer</p>
                               <p>Managed me directly at Caspio</p>
@@ -1082,22 +1082,24 @@
                         architecture decision. Stas is a great team player.
                         <cite>
                           <a
-                            class="career__recommendation-details"
+                            class="recommendation__details"
                             href="https://www.linkedin.com/in/zakir-nuriev-8373b0a1/"
                           >
-                            <img
-                              class="lozad lozad-hidden"
-                              data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
-                              src="static/img/placeholder-square.png"
-                              alt="Zakir Nuriev"
-                            />
-                            <noscript>
+                            <div class="recommendation__author-photo">
                               <img
-                                src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                class="lozad lozad-hidden"
+                                data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                src="static/img/placeholder-square.png"
                                 alt="Zakir Nuriev"
                               />
-                            </noscript>
-                            <div>
+                              <noscript>
+                                <img
+                                  src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                  alt="Zakir Nuriev"
+                                />
+                              </noscript>
+                            </div>
+                            <div class="recommendation__author-info">
                               <h4>Zakir Nuriev</h4>
                               <p>Senior Front-End Developer</p>
                               <p>Worked with me in different teams at Caspio</p>
@@ -1117,22 +1119,24 @@
                         code quality. I'm glad I could work with him!
                         <cite>
                           <a
-                            class="career__recommendation-details"
+                            class="recommendation__details"
                             href="https://www.linkedin.com/in/beata-dobosiewicz-a64802ba/"
                           >
-                            <img
-                              class="lozad lozad-hidden"
-                              data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
-                              src="static/img/placeholder-square.png"
-                              alt="Beata Dobosiewicz"
-                            />
-                            <noscript>
+                            <div class="recommendation__author-photo">
                               <img
-                                src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                class="lozad lozad-hidden"
+                                data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                src="static/img/placeholder-square.png"
                                 alt="Beata Dobosiewicz"
                               />
-                            </noscript>
-                            <div>
+                              <noscript>
+                                <img
+                                  src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                  alt="Beata Dobosiewicz"
+                                />
+                              </noscript>
+                            </div>
+                            <div class="recommendation__author-info">
                               <h4>Beata Dobosiewicz</h4>
                               <p>Full-Stack .NET Developer</p>
                               <p>Reported directly to me at Caspio</p>
@@ -1158,22 +1162,24 @@
                         Asset in the project team!
                         <cite>
                           <a
-                            class="career__recommendation-details"
+                            class="recommendation__details"
                             href="https://www.linkedin.com/in/vgordiyenko/"
                           >
-                            <img
-                              class="lozad lozad-hidden"
-                              data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
-                              src="static/img/placeholder-square.png"
-                              alt="Vitaliy Gordiyenko"
-                            />
-                            <noscript>
+                            <div class="recommendation__author-photo">
                               <img
-                                src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                class="lozad lozad-hidden"
+                                data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                src="static/img/placeholder-square.png"
                                 alt="Vitaliy Gordiyenko"
                               />
-                            </noscript>
-                            <div>
+                              <noscript>
+                                <img
+                                  src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                  alt="Vitaliy Gordiyenko"
+                                />
+                              </noscript>
+                            </div>
+                            <div class="recommendation__author-info">
                               <h4>Vitaliy Gordiyenko</h4>
                               <p>Senior Project Manager</p>
                               <p>Managed me directly at AltexSoft</p>
@@ -1195,22 +1201,24 @@
                         to meet somewhere else on the project.
                         <cite>
                           <a
-                            class="career__recommendation-details"
+                            class="recommendation__details"
                             href="https://www.linkedin.com/in/anton-vasko-b87088a2/"
                           >
-                            <img
-                              class="lozad lozad-hidden"
-                              data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
-                              src="static/img/placeholder-square.png"
-                              alt="Anton Vasko"
-                            />
-                            <noscript>
+                            <div class="recommendation__author-photo">
                               <img
-                                src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                class="lozad lozad-hidden"
+                                data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                src="static/img/placeholder-square.png"
                                 alt="Anton Vasko"
                               />
-                            </noscript>
-                            <div>
+                              <noscript>
+                                <img
+                                  src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                  alt="Anton Vasko"
+                                />
+                              </noscript>
+                            </div>
+                            <div class="recommendation__author-info">
                               <h4>Anton Vasko</h4>
                               <p>Senior Software Engineering</p>
                               <p>
