Replace static avatar with link to avatar from LinkedIn

--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
             <div class="about__photo">
               <img
                 class="lozad lozad-hidden"
-                data-src="static/img/stassribnyi.jpg"
+                data-src="https://media.licdn.com/dms/image/C4D03AQGn1hLxlhQYgw/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=B4rvYMIn9yjNUSziRsiG436ZJhdMQIz5IRTE-87ZUx4"
                 src="static/img/placeholder-square.png"
                 alt="Stas Sribnyi"
               />
               <noscript>
-                <img src="static/img/stassribnyi.jpg" alt="Stas Sribnyi" />
+                <img src="https://media.licdn.com/dms/image/C4D03AQGn1hLxlhQYgw/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=B4rvYMIn9yjNUSziRsiG436ZJhdMQIz5IRTE-87ZUx4" alt="Stas Sribnyi" />
               </noscript>
             </div>
             <figcaption>
