Replace profile photo urls with static ones

--- a/index.html
+++ b/index.html
@@ -302,12 +302,15 @@
             <div class="about__photo">
               <img
                 class="lozad lozad-hidden"
-                data-src="https://media.licdn.com/dms/image/C4D03AQGn1hLxlhQYgw/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=B4rvYMIn9yjNUSziRsiG436ZJhdMQIz5IRTE-87ZUx4"
+                data-src="static/img/profiles/stassribnyi.jpg"
                 src="static/img/placeholder-square.png"
                 alt="Stas Sribnyi"
               />
               <noscript>
-                <img src="https://media.licdn.com/dms/image/C4D03AQGn1hLxlhQYgw/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=B4rvYMIn9yjNUSziRsiG436ZJhdMQIz5IRTE-87ZUx4" alt="Stas Sribnyi" />
+                <img
+                  src="static/img/profiles/stassribnyi.jpg"
+                  alt="Stas Sribnyi"
+                />
               </noscript>
             </div>
             <figcaption>
@@ -1053,13 +1056,13 @@
                             <div class="recommendation__author-photo">
                               <img
                                 class="lozad lozad-hidden"
-                                data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                data-src="static/img/profiles/nickolaysredin.jpg"
                                 src="static/img/placeholder-square.png"
                                 alt="Nickolay Sredin"
                               />
                               <noscript>
                                 <img
-                                  src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                  src="static/img/profiles/nickolaysredin.jpg"
                                   alt="Nickolay Sredin"
                                 />
                               </noscript>
@@ -1088,13 +1091,13 @@
                             <div class="recommendation__author-photo">
                               <img
                                 class="lozad lozad-hidden"
-                                data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                data-src="static/img/profiles/zakirnuriev.jpg"
                                 src="static/img/placeholder-square.png"
                                 alt="Zakir Nuriev"
                               />
                               <noscript>
                                 <img
-                                  src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                  src="static/img/profiles/zakirnuriev.jpg"
                                   alt="Zakir Nuriev"
                                 />
                               </noscript>
@@ -1125,13 +1128,13 @@
                             <div class="recommendation__author-photo">
                               <img
                                 class="lozad lozad-hidden"
-                                data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                data-src="static/img/profiles/beatadobosiewicz.jpg"
                                 src="static/img/placeholder-square.png"
                                 alt="Beata Dobosiewicz"
                               />
                               <noscript>
                                 <img
-                                  src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                  src="static/img/profiles/beatadobosiewicz.jpg"
                                   alt="Beata Dobosiewicz"
                                 />
                               </noscript>
@@ -1168,13 +1171,13 @@
                             <div class="recommendation__author-photo">
                               <img
                                 class="lozad lozad-hidden"
-                                data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                data-src="static/img/profiles/vitaliygordiyenko.jpg"
                                 src="static/img/placeholder-square.png"
                                 alt="Vitaliy Gordiyenko"
                               />
                               <noscript>
                                 <img
-                                  src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                  src="static/img/profiles/vitaliygordiyenko.jpg"
                                   alt="Vitaliy Gordiyenko"
                                 />
                               </noscript>
@@ -1207,13 +1210,13 @@
                             <div class="recommendation__author-photo">
                               <img
                                 class="lozad lozad-hidden"
-                                data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                data-src="static/img/profiles/antonvasko.jpg"
                                 src="static/img/placeholder-square.png"
                                 alt="Anton Vasko"
                               />
                               <noscript>
                                 <img
-                                  src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                  src="static/img/profiles/antonvasko.jpg"
                                   alt="Anton Vasko"
                                 />
                               </noscript>
