--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:description"
-      content="I am a skilled Front-End Engineer with 4+ years of working experience. I use the best techniques from both front-end and back-end worlds in all projects I am working on using a variety of frameworks"
+      content="I am a skilled Front-End Engineer with 5+ years of working experience. I use the best techniques from both front-end and back-end worlds in all projects I am working on using a variety of frameworks"
     />
     <meta
       name="twitter:image"
@@ -207,8 +207,8 @@
         dataLayer.push(arguments);
       }
 
-      gtag("js", new Date());
-      gtag("config", "UA-142547513-1");
+      gtag('js', new Date());
+      gtag('config', 'UA-142547513-1');
     </script>
 
     <!-- External Scripts -->
@@ -243,7 +243,7 @@
           </h1>
           <p>
             Nice to see you here. I am a skilled front-end engineer with more
-            than <span id="js--career-start">4</span> years of working
+            than <span id="js--career-start">5</span> years of working
             experience both with front-end and back-end. I develop single-page
             web applications using a variety of frameworks such as React and
             Angular. I will be glad to collaborate with you.
@@ -321,7 +321,7 @@
                 </li>
                 <li class="about__detail">
                   <span>Age:</span>
-                  <span><span id="js--age">24</span> years</span>
+                  <span><span id="js--age">25</span> years</span>
                 </li>
                 <li class="about__detail">
                   <span>Location:</span>
@@ -421,6 +421,16 @@
                   </span>
                 </li>
                 <li class="skills__item">
+                  <p>Styled Components</p>
+                  <span class="skills__item-strength">
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash ion-flash--disabled"></span>
+                  </span>
+                </li>
+                <li class="skills__item">
                   <p>Angular / RxJs / NgRx</p>
                   <span class="skills__item-strength">
                     <span class="ion-flash"></span>
@@ -431,7 +441,7 @@
                   </span>
                 </li>
                 <li class="skills__item">
-                  <p>Bootstrap</p>
+                  <p>Bootstrap / Bulma</p>
                   <span class="skills__item-strength">
                     <span class="ion-flash"></span>
                     <span class="ion-flash"></span>
@@ -527,6 +537,16 @@
                 </li>
                 <li class="skills__item">
                   <p>NodeJS</p>
+                  <span class="skills__item-strength">
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash"></span>
+                    <span class="ion-flash ion-flash--disabled"></span>
+                    <span class="ion-flash ion-flash--disabled"></span>
+                    <span class="ion-flash ion-flash--disabled"></span>
+                  </span>
+                </li>
+                <li class="skills__item">
+                  <p>NextJS</p>
                   <span class="skills__item-strength">
                     <span class="ion-flash"></span>
                     <span class="ion-flash ion-flash--disabled"></span>
@@ -788,7 +808,50 @@
                     </noscript>
                     <figcaption>
                       <p class="career__company-name">Innovecs</p>
-                      <p>Apr 2019 &mdash; Present</p>
+                      <p>Oct 2019 &mdash; Present</p>
+                    </figcaption>
+                  </figure>
+                  <div class="career__position">
+                    <h4>Senior Software Engineer</h4>
+                    <ul class="career__responsibilities">
+                      <li>Project architecture design and researches.</li>
+                      <li>Delivering of new functionality.</li>
+                      <li>Code reviews and mentoring.</li>
+                      <li>GraphQL server support.</li>
+                    </ul>
+                    <ul class="career__technologies">
+                      <li>Javascript</li>
+                      <li>Typescript</li>
+                      <li>HTML5</li>
+                      <li>Styled Components</li>
+                      <li>Material UI</li>
+                      <li>React</li>
+                      <li>React Hooks</li>
+                      <li>React Context API</li>
+                      <li>Bulma</li>
+                      <li>NextJS</li>
+                      <li>Apollo GraphQL</li>
+                      <li>NodeJS</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="career__work-stage">
+                  <figure class="career__company">
+                    <img
+                      class="lozad lozad-hidden"
+                      data-src="static/img/career/innovecs.png"
+                      src="static/img/placeholder-square.png"
+                      alt="Innovecs"
+                    />
+                    <noscript>
+                      <img
+                        src="static/img/career/innovecs.png"
+                        alt="Innovecs"
+                      />
+                    </noscript>
+                    <figcaption>
+                      <p class="career__company-name">Innovecs</p>
+                      <p>Apr 2019 &mdash; Oct 2019</p>
                     </figcaption>
                   </figure>
                   <div class="career__position">
@@ -796,7 +859,7 @@
                     <ul class="career__responsibilities">
                       <li>
                         Development of new functionality and support for older
-                        once.
+                        ones.
                       </li>
                       <li>Project architecture and code quality maintenance</li>
                       <li>Requirement gathering and clarifications.</li>
@@ -1464,7 +1527,7 @@
 
     <footer id="contacts" class="js--section section contacts">
       <h2 class="section__title contacts__title">Contacts</h2>
-      <div class="section__content  contacts__content">
+      <div class="section__content contacts__content">
         <div class="contacts__group">
           <h3 class="contacts__group-title">Links</h3>
           <ul class="socials">
