Update personal info

--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
                 </li>
                 <li class="about__detail">
                   <span>Age:</span>
-                  <span><span id="js--age">25</span> years</span>
+                  <span><span id="js--age">28</span> years</span>
                 </li>
                 <li class="about__detail">
                   <span>Location:</span>
-                  <span> Europe, Ukraine, Kiev</span>
+                  <span> Europe, Ukraine, Kyiv</span>
                 </li>
               </ul>
             </figcaption>
