Update bio section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Hello there 😊, I am a skilled Front-End Engineer with 5+ years of working experience both with front-end and back-end. I use the best techniques from both of these two worlds in all projects I am working on using a variety of frameworks such as React and Angular. Wanna learn more what I can do?"
+      content="Hello there 😊, I am a skilled Front-End Engineer with 8+ years of working experience both with front-end and back-end. I use the best techniques from both of these two worlds in all projects I am working on using a variety of frameworks such as React and Angular. Wanna learn more what I can do?"
     />
 
     <meta
@@ -264,9 +264,7 @@
         </div>
       </div>
       <nav id="js--nav" class="nav">
-        <p class="nav__title">
-          Wanna learn more what I can do?
-        </p>
+        <p class="nav__title">Wanna learn more what I can do?</p>
         <div class="nav__content">
           <ul class="nav__links">
             <li><a class="js--nav-link nav__link" href="#about">about</a></li>
@@ -331,17 +329,17 @@
             </figcaption>
           </figure>
           <p class="about__description">
-            Working with UI is my passion and so I do it using the latest
-            technologies such as React and Angular (but personally prefer using
-            React and Vanilla Javascript 😁). Some time ago I used to be a
-            full-stack engineer, so I worked both with back and front end code.
-            Now I use all my knowledge in UI development world. I started my
-            wonderful career about five years ago by studying full-stack
-            software engineer courses, I did my best to learn the most about
-            software development and apply for a job at my first company. Since
-            then I worked with several companies, with the different teams, hold
-            different positions and I am here, to provide you with all that
-            experience to make you happy 😎.
+            Working with UI is my passion, so I do it using the latest
+            technologies such as React and NextJS (React and Typescript is my
+            primary focus, but I do enjoy working with NodeJS as well). Some
+            time ago I used to be a full-stack engineer, so I've worked both with
+            back and front end code. Now I use all my knowledge in UI
+            development world. I started my wonderful career about eight years
+            ago by studying full-stack software engineer courses, I did my best
+            to learn the most about software development and apply for a job at
+            my first company. Since then I've worked with several companies, with
+            different teams, hold different positions and I am here to
+            use all that experience to make you happy 😎.
           </p>
           <a
             id="cv"
@@ -1023,9 +1021,7 @@
                     <h4 class="career__institution-name">
                       Kremenchuk State Polytechnical University
                     </h4>
-                    <p class="career__education-degree">
-                      Master's degree
-                    </p>
+                    <p class="career__education-degree">Master's degree</p>
                     <p class="career__education-field-of-study">
                       Automation Engineer Technology/Technician
                     </p>
@@ -1084,9 +1080,7 @@
                     <h4 class="career__institution-name">
                       Kremenchuk State Polytechnical University
                     </h4>
-                    <p class="career__education-degree">
-                      Bachelor's degree
-                    </p>
+                    <p class="career__education-degree">Bachelor's degree</p>
                     <p class="career__education-field-of-study">
                       Automation Engineer Technology/Technician
                     </p>
@@ -1303,9 +1297,7 @@
       </section>
 
       <section id="projects" class="js--section section projects">
-        <h2 class="section__title projects__title">
-          Projects
-        </h2>
+        <h2 class="section__title projects__title">Projects</h2>
         <div class="section__content projects__content">
           <ul class="projects__list">
             <li class="js--projects__item projects__item">
@@ -1560,9 +1552,7 @@
                 aria-label="GitHub"
               >
                 <span class="socials__link-icon ion-social-github"></span>
-                <span class="socials__link-text">
-                  github.com/stassribnyi
-                </span>
+                <span class="socials__link-text"> github.com/stassribnyi </span>
               </a>
             </li>
             <li>
@@ -1584,9 +1574,7 @@
                 aria-label="Facebook"
               >
                 <span class="socials__link-icon ion-social-facebook"></span>
-                <span class="socials__link-text">
-                  fb.com/stassribnyi
-                </span>
+                <span class="socials__link-text"> fb.com/stassribnyi </span>
               </a>
             </li>
           </ul>
