--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <a
             id="cv"
             class="btn"
-            href="https://drive.google.com/open?id=0B4WwhDkyLxKpSDZzdzU4YUdBX1k"
+            href="https://drive.google.com/file/d/0B4WwhDkyLxKpSDZzdzU4YUdBX1k/view?usp=sharing&resourcekey=0-oaOAnHVUYJH_YuENsY2jXA"
           >
             Download regular version of my CV
           </a>
